--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "dyrynda/laravel-efficient-uuid": "^3.1",
         "dyrynda/laravel-model-uuid": "^5.0",
         "fideloper/proxy": "^4.0",
+        "fruitcake/laravel-cors": "^1.0",
         "laravel/framework": "^6.2",
         "laravel/tinker": "^2.0",
         "nwidart/laravel-modules": "^6.2",
