--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "laravel/framework": "^6.2",
         "laravel/tinker": "^2.0",
         "nwidart/laravel-modules": "^6.2",
-        "spatie/laravel-translatable": "^4.2"
+        "spatie/laravel-translatable": "^4.2",
+        "spatie/laravel-medialibrary":"^7.19.3"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
