--- a/composer.json
+++ b/composer.json
@@ -14,9 +14,11 @@
         "fideloper/proxy": "^4.0",
         "fruitcake/laravel-cors": "^1.0",
         "laravel/framework": "^6.2",
+        "laravel/passport": "^8.4",
         "laravel/tinker": "^2.0",
         "nwidart/laravel-modules": "^6.2",
         "spatie/laravel-medialibrary": "^7.0.0",
+        "spatie/laravel-permission": "^3.11",
         "spatie/laravel-translatable": "^4.2"
     },
     "require-dev": {
